--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -1,5 +1,5 @@
 .single-hero-slide {
-    background-color: #004caa;
+    background-color: skyblue;
     padding-top: 200px;
     padding-bottom: 220px;
     font-family: "Josefin Sans", sans-serif;
